@@ -1,5 +1,5 @@
 dnl -*- Autoconf -*-
-dnl Copyright (C) 1993-2003 Free Software Foundation, Inc.
+dnl Copyright (C) 1993-2008 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -40,6 +40,7 @@ int main() { printf_address(chop_address(&printf_address)); exit(0); }
 EOF
 AC_TRY_EVAL(ac_link)
 cl_cv_address_code=`./conftest`
+rm -rf conftest.dSYM
 rm -f conftest*
 else
 cl_cv_address_code='guessing 0'
@@ -62,6 +63,7 @@ int main() { printf_address(chop_address(malloc(10000))); exit(0); }
 EOF
 AC_TRY_EVAL(ac_link)
 cl_cv_address_malloc=`./conftest`
+rm -rf conftest.dSYM
 rm -f conftest*
 else
 cl_cv_address_malloc='guessing 0'
@@ -105,6 +107,7 @@ int main() {
 EOF
 AC_TRY_EVAL(ac_link)
 cl_cv_address_shlib=`./conftest`
+rm -rf conftest.dSYM
 rm -f conftest*
 else
 cl_cv_address_shlib='guessing 0'
@@ -121,6 +124,7 @@ int main() { int dummy; printf_address(chop_address(&dummy)); exit(0); }
 EOF
 AC_TRY_EVAL(ac_link)
 cl_cv_address_stack=`./conftest`
+rm -rf conftest.dSYM
 rm -f conftest*
 else
 cl_cv_address_stack='guessing ~0'
