@@ -1,5 +1,5 @@
 dnl -*- Autoconf -*-
-dnl Copyright (C) 1993-2005 Free Software Foundation, Inc.
+dnl Copyright (C) 1993-2008 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -45,6 +45,7 @@ if test -s conftest; then
 else
   echo "creation of $cl_machine_file_h failed"
 fi
+rm -rf conftest.dSYM
 rm -f conftest*
 else
 echo "creating $cl_machine_file_h"
